--- a/index.html
+++ b/index.html
@@ -35,21 +35,41 @@
   
   <a href="#"  style="width:20%;" id="btnvibrar" class="ui-btn ">Vibrar</a>
   <a href="#"  style="width:20%;" id="btnbeep" class="ui-btn ">Beep</a>
-  <a href="#"  style="width:20%;" id="btnbarrer" class="ui-btn ">Barrer</a>
+  <a href="#barrer"  style="width:20%;" id="btnbarrer" class="ui-btn ">Barrer</a>
   <a href="#"  style="width:20%;" id="btneventos" class="ui-btn ">Eventos</a>
   </div>
  
   </div>
 
+  <div data-role="footer">
+    <h1>@YannetMaximilianoHernandez</h1>
+  </div
+ </div> 
   
+ <!-- Principal -->
 
-
+ <!-- Page2 -->
+ <div data-role="page" id="barrer" >   
+  <div data-role="header">
+    <h1>Barrer</h1>
+  </div>
+  
+  <div align="center" style="background-color:#000; color:#FFF" id="izquierda">
+ <h1> Izquierda </h1>
+  </div>
+ 
+  <div align="center" style="background-color:#F99; color:#000" id="derecha">
+ <h1> Derecha </h1>
+ </div>
+  
   <div data-role="footer">
     <h1>@YannetMaximilianoHernandez</h1>
   </div>
  </div> 
   
- <!-- Principal -->
+ <!-- Page2 -->
+
+
 
  </body>
 </html> 
